[gd_scene load_steps=12 format=3 uid="uid://cskwtk0k0q3ir"]

[ext_resource type="Script" path="res://scripts/enemies/basic_enemy.gd" id="1_pcqlq"]
[ext_resource type="Texture2D" uid="uid://gyn0sq3cfw3k" path="res://assets/tilemap.png" id="3_bhyvw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bwvyd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_118xx"]
atlas = ExtResource("3_bhyvw")
region = Rect2(18, 153, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sbfsl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_118xx")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mqxw0"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_o1ik4"]
radius = 98.0051

[sub_resource type="CircleShape2D" id="CircleShape2D_plqmg"]
radius = 26.4764

[sub_resource type="Animation" id="Animation_ybjv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qlnt1"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0472, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqmt3"]
_data = {
"RESET": SubResource("Animation_ybjv6"),
"attack": SubResource("Animation_qlnt1")
}

[node name="BasicEnemy" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_pcqlq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_bwvyd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sbfsl")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_mqxw0")

[node name="ChaseArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource("CircleShape2D_o1ik4")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_plqmg")

[node name="AttackTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sqmt3")
}

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.552967, 0, 0, 1)
offset_left = -15.0
offset_top = 11.0
offset_right = 88.0
offset_bottom = 38.0
scale = Vector2(0.3, 0.2)
show_percentage = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="ChaseArea" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_chase_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
